# neko

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  build.zig  compile.sh  lol.js  nice.js  test.js
src/: api.rs  globals.rs  main.rs  modules.rs  neko.cpp  types.hpp  utils.rs
src/api/: exceptions.rs  neko-iter.hpp  neko.cpp  neko.hpp  readfile.rs
src/fn/: print.cpp  print.hpp
src/modules/: handlers.rs  modules.cpp  modules.hpp  wrap.cpp  wrapper.rs
tests/: data.js  hello.js
